fix: header sizing on small screens // fix: hover effect on social media links in header (isolation)

--- a/src/app/shared/components/elements/letter/letter.scss
+++ b/src/app/shared/components/elements/letter/letter.scss
@@ -1,14 +1,20 @@
 .letter {
-  display: inline-block;
+  display: flex;
+  align-items: flex-end;
+  vertical-align: bottom;
   transition: width 0.25s ease,
   transform 0.25s ease;
   transform-origin: left center;
+  height: 100px;
+  padding-left: 8px;
+  margin-left:-8px;
 }
 
 .letter img {
   display: block;
   max-height: 100px;
   height: auto;
+  max-height: 100px;
   width: 100%;
 }
 
@@ -18,6 +24,18 @@
 
 .sub:hover .letter img{
   padding-top:100px;
+}
+
+@media (max-width: 1100px) {
+  .letter {
+    height: 80px;
+    padding-left: 6px;
+    margin-left:-6px;
+  }
+
+  .letter img {
+    max-height: 80px;
+  }
 }
 
 @media (max-width: 768px) {
