--- a/src/app/shared/components/elements/social-links/social-links.scss
+++ b/src/app/shared/components/elements/social-links/social-links.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   gap: 16px;
   background-color: transparent;
+  isolation: isolate;
 }
 
 .contactFrame {
