--- a/src/styles.scss
+++ b/src/styles.scss
@@ -160,8 +160,8 @@ h2 {
 @media (max-width: 768px) {
 
   h1 {
-    font-size: clamp(52px, 15vw, 128px);
-    line-height: clamp(42px, 15vw, 128px);
+    font-size: clamp(48px, 14vw, 120px);
+    line-height: clamp(48px, 14vw, 120px);
   }
 
   h2 {
